Fix game over rule and add "Invisible Ball" mode
- Fixed the game over rule to correctly announce the winner
- Implemented the "Invisible Ball" game mode in "index.html"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,6 @@ body {
     background: rgba(0, 0, 0, 0.5);
 }
 
-#more-settings{
-    
-}
 
 input, button, select {
     display: block;
